# maan-backend

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: client.rs  create_beneficiary.rs  lib.rs  list_deals.rs  list_virtual_account.rs  signer.rs  utils.rs
core/src/tochka/: create_beneficiary.rs  create_deal.rs  create_virtual_account.rs  get_beneficiary.rs  get_deal.rs  get_document.rs  get_payment.rs  get_virtual_account.rs  identification_payment.rs  list_beneficiary.rs  list_deals.rs  list_payments.rs  list_virtual_account.rs  mod.rs  sbp_qrcode.rs  update_deal.rs
maan-backend/: Cargo.toml
src/: lib.rs
tochka-cyclops/: Cargo.toml
tochka-cyclops/src/: create_beneficiary.rs  create_deal.rs  create_virtual_account.rs  execute_deal.rs  get_beneficiary.rs  get_deal.rs  get_payment.rs  lib.rs  list_beneficiary.rs  test_utils.rs  utils.rs
tochka-cyclops/src/signer/: dummy.rs  mod.rs  rsa.rs
web/: Cargo.toml
web/src/: db.rs  error.rs  main.rs
