[package]
name = "maan-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
reqwest = { version = "0.12.4", features = ["blocking", "json",] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.83"
base64 = "0.22.1"
rsa = { version = "0.9.7", features = [ "pem", "sha2",] }
# sha2 = "0.10.8"
uuid = {version = "1.11.0", features = ["v4"]}

[dev-dependencies]
dotenv = "*"
env_logger = "0.11.5"
