[package]
name = "maan-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.83"
log = "0.4.25"
tokio = { version = "1.42.0", features = ["full"] }
maan-core = { path = "../core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
async-trait = "0.1.85"
thiserror = "2.0.11"
env_logger = "0.10.0"

