[package]
name = "maan-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.83"
log = "0.4.25"
tokio = { version = "1.42.0", features = ["full"] }
tochka-cyclops = { path = "../tochka-cyclops" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
async-trait = "0.1.85"
thiserror = "2.0.11"
env_logger = "0.10.0"

[dev-dependencies]
toml = "0.5.8"
rand = "0.8.4"
base64 = "0.13.0"
# futures = "0.3.31"
